scale-test: restore download command ipop.bash: add PYTHON variable README/scale.bash/scale.cfg: update defaults

--- a/Test/ipop-scale-test/scale/scale.cfg
+++ b/Test/ipop-scale-test/scale/scale.cfg
@@ -1,4 +1,7 @@
-NODE      ssabogal@pc-c220m4-r02-10.wisc.cloudlab.us
-SERVER    ssabogal@pc-c220m4-r02-10.wisc.cloudlab.us
-FORWARDER ssabogal@pc-c220m4-r02-10.wisc.cloudlab.us
-SIZE      20
+NODE       ssabogal@c220g2-010618.wisc.cloudlab.us
+SERVER     ssabogal@c220g2-010618.wisc.cloudlab.us
+FORWARDER  ssabogal@c220g2-010618.wisc.cloudlab.us
+SIZE       20
+
+CONTROLLER v16.01.0
+TINCAN     v16.01.0
