Bugfixes + minor enhancements in scale_test.sh (#9)
* WIP: usability

* WIP: modularize configure process

* Modularize setup in configure step

* Change scale-test to use ejabberd turn service

* Fixes Tincan repo not cloned in containers-create

* Fixes forgotten installation of lxc in configure

* Removes problematic quotes from LXC_CONFIG

* Removes erroneous quotes from LXC_PACKAGES var

* Further fixing of quotes

* Fixes typo in running ipop-tests

* Creats ejabberdctl apparmor profile to fix seg fault

* Copies ejabberdctl apparmor profile during install

* Updates lxc.cgroup.devices.allow only if required

* Fixes default package installation on new containers

* Removed erroneous quotes (again!)

* Adds functions to setup Tincan and Controller

--- a/Test/ipop-scale-test/config/ejabberd.yml
+++ b/Test/ipop-scale-test/config/ejabberd.yml
@@ -151,6 +151,7 @@ listen:
     port: 3478
     transport: udp
     module: ejabberd_stun
+    use_turn: true
 
   ##
   ## To handle XML-RPC requests that provide admin credentials:
