Update Debian installer package

--- a/Deploy/deb-pak/ipop-vpn/etc/opt/ipop-vpn/config.json
+++ b/Deploy/deb-pak/ipop-vpn/etc/opt/ipop-vpn/config.json
@@ -35,7 +35,7 @@
     "Overlays": {
       "1010001": {
         "Name": "Overlay1",
-        "Description": "IPOP v18 testbed"
+        "Description": "IPOP v18 overlay"
       }
     }
   },
